@@ -5,14 +5,14 @@ SHA256 10cb77286a419a6ee4949f47cdc434b5bbff22d00d714fd6b079a4eb172331e0 files/50
 DIST bbdb-2.35.tar.gz 393097 RMD160 efa04f4ea1428f591bd20738f8c7d0c5f3a919e8 SHA1 7524dd2b3951b4635c606e673c97b85c9cf0621c SHA256 3fb1316e2ed74d47ca61187fada550e58797467bd9e8ad67343ed16da769f916
 DIST dates.el 7048 RMD160 f8428bf5614031b907fc1395b3d4f3e59345649b SHA1 9ea9095a24dc7f1b09c4173301ef32d412aeeacf SHA256 8de33f7b00ac1766eb104c1bf2f362aff54e3de4d67cbd0a4da1b6b137363ec4
 DIST point-at.el 440 RMD160 139834d869575df5b826e681e37f3d0f769af789 SHA1 f7dcaa6091dd2f89a95293bc6c534630f0461b7c SHA256 c9695455b96f17fbebc9cf0ae21b042fb04b688016279010d87c01e9d270e0c8
-EBUILD bbdb-2.35.ebuild 1802 RMD160 776bab82e970664a129519cb9c59278f69a43d7b SHA1 020bb569371f2861bd766b6de2a0e6086059a550 SHA256 d31a3a98e960744839654ce2ae038da19267058ca0bf641cb2ceb2476a992a0e
-MD5 caeca248692c33956ac40e4eefc54fa5 bbdb-2.35.ebuild 1802
-RMD160 776bab82e970664a129519cb9c59278f69a43d7b bbdb-2.35.ebuild 1802
-SHA256 d31a3a98e960744839654ce2ae038da19267058ca0bf641cb2ceb2476a992a0e bbdb-2.35.ebuild 1802
-MISC ChangeLog 786 RMD160 d569c9a3a82c01fb61c9f46b4b32ce72c5ee2cd9 SHA1 0263ebd91fb5d4fec2cf95ee25e1414fd9f68f38 SHA256 9cb231b5ebd890df3d4c03b33909be1d63bb9856d28a14d12f278d92858d6593
-MD5 8d6ef3b9114b4426fdd78738cb670337 ChangeLog 786
-RMD160 d569c9a3a82c01fb61c9f46b4b32ce72c5ee2cd9 ChangeLog 786
-SHA256 9cb231b5ebd890df3d4c03b33909be1d63bb9856d28a14d12f278d92858d6593 ChangeLog 786
+EBUILD bbdb-2.35.ebuild 1965 RMD160 ed3e78a4d687511b6038aab67da8f561ef0b89c8 SHA1 ea470e96e796a2e376e3f4e61b55c9f6b95df118 SHA256 a7efb4b73dbada4a36d2e7ac83f53c00c25ff7f15b3625d7f94a5b49f1b97015
+MD5 6e42258c9f8916ebd2f8f8f7a2766cbc bbdb-2.35.ebuild 1965
+RMD160 ed3e78a4d687511b6038aab67da8f561ef0b89c8 bbdb-2.35.ebuild 1965
+SHA256 a7efb4b73dbada4a36d2e7ac83f53c00c25ff7f15b3625d7f94a5b49f1b97015 bbdb-2.35.ebuild 1965
+MISC ChangeLog 1051 RMD160 67b4adea30539f53249fb209867ee0d3501a400b SHA1 24162ab884145d48d05419007819448490fc0cf2 SHA256 a74492362bcc9e29ea471085eb66091a824c1d4fd1c6ad8dcafac6dd68686acc
+MD5 0aec918c51b01707f05eacfcb3cfc968 ChangeLog 1051
+RMD160 67b4adea30539f53249fb209867ee0d3501a400b ChangeLog 1051
+SHA256 a74492362bcc9e29ea471085eb66091a824c1d4fd1c6ad8dcafac6dd68686acc ChangeLog 1051
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
